added links navbar and belonging pages

--- a/Costs.html
+++ b/Costs.html
@@ -20,7 +20,7 @@
     </div>
     <p class="title"> ETDS AMSTERDAM 2020 </p>
     <div class="navbar" id="navbar">
-        <ul clas="navlist" id="navlist">
+        <ul class="navlist" id="navlist">
           <li class = "logo" id = "logo">
               <div class="container2" id="btn-nav">
                 <div class = "toggle-btn" id="toggle-btn2" onclick='nightSwitch()'>
@@ -28,18 +28,23 @@
               </div>
             </div>
           </li>
-          <li class = "house current"> <div id="home">Home </div> </li>
-          <li class = "dropdown" onmouseenter="myEnterFunction()"> <a class="dropbtn">Information <a>
-            <div class="dropdown-content">
+          <li class = "house"> <div id="home"> <a href="index.html">Home </a></div> </li>
+          <li class = "dropdown current" onmouseenter="myEnterFunction()" > <a class="dropbtn"> <div id="info">Information </div> </a>
+            <div class="dropdown-content" id="dropdown-content">
               <a href="tournament.html">Tournament</a>
               <a href="program.html"> Program </a>
               <a href="location.html">Location</a>
-              <a>FAQ</a>
+              <a href="costs.html">Costs</a>
+              <a href="packinglist.html">Packing List </a>
+              <a href="regulations.html">Regulations</a>
+              <a href="results.html">Results</a>
+              <a href="lostandfound.html">Lost & Found</a>
+              <a href="faq.html">FAQ</a>
           </div>
           </li>
-          <li> <div id="registration"> <a href="registration.html"> Registration </a> </div></li>
-          <li> <div id="volunteer"> <a href="volunteer.html"> Volunteer </a> </div></li>
-          <li> <div id="merchandise">Merchandise </div></li>
+          <li class="registration"> <div id="registration"> <a href="registration.html"> Teampcaptains </br>/ Registration </a> </div></li>
+          <li class="volunteer"> <div id="volunteer"> <a href="volunteer.html"> Volunteer </a> </div></li>
+          <li class="merchandise"> <div id="merchandise"> <a href="merchandise.html"> Merchandise </a></div></li>
         </ul>
     </div>
     <div class="main" id="main">
@@ -48,7 +53,7 @@
       The prices are not definite yet, and can be subject to change. Check our
       website regulary for the latest prices.
       Your teamcaptains will be informed shortly before the registation about the
-      definite price.   
+      definite price. </br></br>
       <table>
         <tr>
           <th>Type</th>
