--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
               <a href="program.html"> Program </a>
               <a href="location.html">Location</a>
               <a href="costs.html">Costs</a>
-              <a href="packinglist">Packing List </a>
+              <a href="packinglist.html">Packing List </a>
               <a href="regulations.html">Regulations</a>
+              <a href="results.html">Results</a>
+              <a href="lostandfound.html">Lost & Found</a>
               <a href="faq.html">FAQ</a>
           </div>
           </li>
