--- a/lostandfound.html
+++ b/lostandfound.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <title>ETDS Template</title>
-    <meta name="robots" content="noindex">
-    <link rel="stylesheet" href="css/combine.css">
+  <title>ETDS Template</title>
+  <meta name="robots" content="noindex">
+  <link rel="stylesheet" href="css/combine.css">
 </head>
 <body onload="dayOrNight()" class="body">
   <div class="container" id="container">
@@ -29,7 +29,7 @@
             </div>
           </li>
           <li class = "house"> <div id="home"> <a href="index.html">Home </a></div> </li>
-          <li class = "dropdown" onmouseenter="myEnterFunction()" > <a class="dropbtn"> <div id="info">Information </div> </a>
+          <li class = "dropdown current" onmouseenter="myEnterFunction()" > <a class="dropbtn"> <div id="info">Information </div> </a>
             <div class="dropdown-content" id="dropdown-content">
               <a href="tournament.html">Tournament</a>
               <a href="program.html"> Program </a>
@@ -42,33 +42,18 @@
               <a href="faq.html">FAQ</a>
           </div>
           </li>
-          <li class="registration current"> <div id="registration"> <a href="registration.html"> Teampcaptains </br>/ Registration </a> </div></li>
+          <li class="registration"> <div id="registration"> <a href="registration.html"> Teampcaptains </br>/ Registration </a> </div></li>
           <li class="volunteer"> <div id="volunteer"> <a href="volunteer.html"> Volunteer </a> </div></li>
           <li class="merchandise"> <div id="merchandise"> <a href="merchandise.html"> Merchandise </a></div></li>
         </ul>
     </div>
-  <div class="main" id="main">
-    <h1>Registration</h1>
-    <p> Teamcaptains have to register you. Please ask your local dance society
-      for the contact information of your teams teamcaptain. If you have trouble
-      finding your teamcaptains contact us</br></br>
-      There are 600 spots for the tournament. The deadline for registation will
-      be anounced. After the registration the system will draft names. For
-      couples who are register together, you will get in together.
-      Whe are using the system that was also used in previous ETDS (ETDS
-      Groningen).
-      The cancelation policy will be anounced.
-    </p>
-    <h1> ETDS dashboard </h1>
-    <div class = "dashboard-btn"> <a href="https://xtds.nl/dashboard"> XTDS DASHBOARD </a> </div>
-    <p></br>
-    This is where you can log on as team captain to register couples, update
-      information and check your registrations. </p>
-
-  </div>
-  <div class="footer" id="footer"> </div>
+    <div class="main" id="main">
+      <h1>Lost and Found</h1>
+      <p> The competition is planned to start in the future (30-05-2020).
+        Hence there is not anything lost or found yet. </p>
+    </div>
+    <div class="footer" id="footer"> </div>
   </div>
   <script src="js/combine.js"></script>
 </body>
-
 </html>
