--- a/merchandise.html
+++ b/merchandise.html
@@ -42,28 +42,14 @@
               <a href="faq.html">FAQ</a>
           </div>
           </li>
-          <li class="registration current"> <div id="registration"> <a href="registration.html"> Teampcaptains </br>/ Registration </a> </div></li>
+          <li class="registration"> <div id="registration"> <a href="registration.html"> Teampcaptains </br>/ Registration </a> </div></li>
           <li class="volunteer"> <div id="volunteer"> <a href="volunteer.html"> Volunteer </a> </div></li>
-          <li class="merchandise"> <div id="merchandise"> <a href="merchandise.html"> Merchandise </a></div></li>
+          <li class="merchandise current"> <div id="merchandise"> <a href="merchandise.html"> Merchandise </a></div></li>
         </ul>
     </div>
   <div class="main" id="main">
-    <h1>Registration</h1>
-    <p> Teamcaptains have to register you. Please ask your local dance society
-      for the contact information of your teams teamcaptain. If you have trouble
-      finding your teamcaptains contact us</br></br>
-      There are 600 spots for the tournament. The deadline for registation will
-      be anounced. After the registration the system will draft names. For
-      couples who are register together, you will get in together.
-      Whe are using the system that was also used in previous ETDS (ETDS
-      Groningen).
-      The cancelation policy will be anounced.
-    </p>
-    <h1> ETDS dashboard </h1>
-    <div class = "dashboard-btn"> <a href="https://xtds.nl/dashboard"> XTDS DASHBOARD </a> </div>
-    <p></br>
-    This is where you can log on as team captain to register couples, update
-      information and check your registrations. </p>
+    <h1>Merchandise</h1>
+    <p> comming soon. </p>
 
   </div>
   <div class="footer" id="footer"> </div>
