--- a/volunteer.html
+++ b/volunteer.html
@@ -20,7 +20,7 @@
     </div>
     <p class="title"> ETDS AMSTERDAM 2020 </p>
     <div class="navbar" id="navbar">
-        <ul clas="navlist" id="navlist">
+        <ul class="navlist" id="navlist">
           <li class = "logo" id = "logo">
               <div class="container2" id="btn-nav">
                 <div class = "toggle-btn" id="toggle-btn2" onclick='nightSwitch()'>
@@ -28,18 +28,23 @@
               </div>
             </div>
           </li>
-          <li class = "house"> <div id="home"><a href="index.html">Home </a></div> </li>
-          <li class = "dropdown" onmouseenter="myEnterFunction()"> <a class="dropbtn">Information <a>
-            <div class="dropdown-content">
-              <a>Tournament</a>
+          <li class = "house"> <div id="home"> <a href="index.html">Home </a></div> </li>
+          <li class = "dropdown" onmouseenter="myEnterFunction()" > <a class="dropbtn"> <div id="info">Information </div> </a>
+            <div class="dropdown-content" id="dropdown-content">
+              <a href="tournament.html">Tournament</a>
+              <a href="program.html"> Program </a>
               <a href="location.html">Location</a>
-              <a>Time-table</a>
-              <a>FAQ</a>
+              <a href="costs.html">Costs</a>
+              <a href="packinglist.html">Packing List </a>
+              <a href="regulations.html">Regulations</a>
+              <a href="results.html">Results</a>
+              <a href="lostandfound.html">Lost & Found</a>
+              <a href="faq.html">FAQ</a>
           </div>
           </li>
-          <li> <div id="registration"> <a href="registration.html"> Registration </a> </div></li>
-          <li class="current"> <div id="volunteer">Volunteer </div></li>
-          <li> <div id="merchandise">Merchandise </div></li>
+          <li class="registration"> <div id="registration"> <a href="registration.html"> Teampcaptains </br>/ Registration </a> </div></li>
+          <li class="volunteer current"> <div id="volunteer"> <a href="volunteer.html"> Volunteer </a> </div></li>
+          <li class="merchandise"> <div id="merchandise"> <a href="merchandise.html"> Merchandise </a></div></li>
         </ul>
     </div>
   <div class="main" id="main">
@@ -52,9 +57,9 @@
     <p>Besides the mandotory shifts we can use every other shift hours you are willing
     to offer us! </br>
     With doing volunteer shifts beside your mandotory shift you can also earn bonuspoints
-    for your team!</p>
+    for your team!</p> </br></br>
 
-    <h1> It is not possible yet to inscribe for shifts </h1>
+    <p><b> It is not possible yet to inscribe for shifts </b></p>
 
   </div>
   <div class="footer" id="footer"> </div>
