Update breitensport closedD table

--- a/tournament.html
+++ b/tournament.html
@@ -74,7 +74,40 @@
       There will be a qualification round with all Breitersport dancers, to determine in which level you will continue
       the competition. </p>
       <h1> Breitersport or ClosedD/Open? </h1>
-      <p> Information is comming soon. </p>
+      <table>
+        <tr>
+          <th></th>
+          <th> Breitensport </th>
+          <th> Closed/Open </th>
+        </th>
+        <tr>
+          <th> Netherlands NADB </td>
+          <td> Debutants 2, 3 and 4 </td>
+          <td> Debutants 1, C-, B-, A- and hoofdklasse ballroom </br>
+              Debutants 1,B-,A- and hoofdklasse latin
+          </td>
+        </tr>
+        <tr>
+          <th> Netherlands NVAD </td>
+          <td> Debutants 1, 2 and 3 </td>
+          <td> Open klasse, hoofdklasse </td>
+        </tr>
+        <tr>
+          <th> Netherlands NDO </td>
+          <td> Debutants, national amateurs </td>
+          <td> masterclass (if you are not also dance within an another bond) </td>
+        </tr>
+        <tr>
+          <th> Netherlands WDC </td>
+          <td> Pre-amateurs </br>
+              If maximum 2 poules in National amateurs: </br>
+              national amateurs until B poule </td>
+          <td> If more than 2 poules in National amateurs: National amateurs B poule </br>
+National amateurs A poule, masterclass B and A poule </td>
+        </tr>
+      </table>
+
+      <p></br></br> Information is still being updated. </p>
 
 
 
