Update breitensport table

--- a/tournament.html
+++ b/tournament.html
@@ -103,7 +103,34 @@
               If maximum 2 poules in National amateurs: </br>
               national amateurs until B poule </td>
           <td> If more than 2 poules in National amateurs: National amateurs B poule </br>
-National amateurs A poule, masterclass B and A poule </td>
+              National amateurs A poule, masterclass B and A poule </td>
+        </tr>
+        <tr>
+          <th> Germany </td>
+          <td> Breitensport, Startklasse, D-class </td>
+          <td> D-, C-, B-, A-, S-class </td>
+        </tr>
+        <tr>
+          <th> Germany (Form.) </td>
+          <td> Regionalliga (ballroom) </br>
+              Landesliga, oberliga (latin) </td>
+          <td> Regionalliga (latin) </br>
+                2+1. Bundesliga </td>
+        </tr>
+        <tr>
+          <th> Norway </td>
+          <td> Rekrutteringsklass, Konkurranse </td>
+          <td> Konkurranseklass, Eliteklass </td>
+        </tr>
+        <tr>
+          <th> Czech republic </td>
+          <td> TPV, E-class(breitensport), D-class </td>
+          <td> D-class, C-class, B-/A-/M-class </td>
+        </tr>
+        <tr>
+          <th> England </td>
+          <td> Beginner, Novice, Intermediate </td>
+          <td> Intermediate, Advanced, National League </td>
         </tr>
       </table>
 
