corrected breitersport in breitensport

--- a/tournament.html
+++ b/tournament.html
@@ -73,7 +73,7 @@
       Masters and Champions. <br/>
       There will be a qualification round with all Breitersport dancers, to determine in which level you will continue
       the competition. </p>
-      <h1> Breitersport or ClosedD/Open? </h1>
+      <h1> Breitensport or ClosedD/Open? </h1>
       <table>
         <tr>
           <th></th>
