--- a/index.html
+++ b/index.html
@@ -76,13 +76,11 @@
         Samba and Paso doble. <br/><br/>
         This tournament is not only about competing. The are an multitude of fun
          activities planned, and two great parties. <br/><br/>
-
-
-
-
-
     </div>
-    <div class="footer" id="footer"> </div>
+    <div class="footer" id="footer">
+      <div id="location"></div>
+      <div id="mail"></div>
+    </div>
   </div>
   <script src="js/combine.js"></script>
 </body>
