adding icons to footer

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <b>May 29th</b> to  <b>June 1st, 2020</b>. Hopefully we will see you all there! <br/>
       On this website you can find all the information about the etds amsterdam 2020.
         If your not familiar with the term ETDS please read the information below. </p>
-      <h1> Introduction vidoe & Theme anouncement </h1>
+      <h1> Introduction video & Theme anouncement </h1>
       <p> Video comming soon! </p>
       <h1> Theme </h1>
       <p> In our capital city we like to party. And we like to party in Style!
@@ -83,8 +83,8 @@
          activities planned, and two great parties. <br/><br/>
     </div>
     <div class="footer" id="footer">
-      <div id="location"></div>
-      <div id="mail"></div>
+      <img id="location" src="imgs/location.svg">
+      <img id="mail" src="imgs/mail.svg">
     </div>
   </div>
   <script src="js/combine.js"></script>
