Improved spelling and css cleanup

--- a/costs.html
+++ b/costs.html
@@ -53,7 +53,7 @@
       The prices are not definite yet, and can be subject to change. Check our
       website regulary for the latest prices.
       Your teamcaptains will be informed shortly before the registation about the
-      definite price. </br></br>
+      definitive price. </br></br>
       <table>
         <tr>
           <th>Type</th>
