--- a/faq.html
+++ b/faq.html
@@ -42,14 +42,14 @@
               <a href="faq.html">FAQ</a>
           </div>
           </li>
-          <li class="registration"> <div id="registration"> <a href="registration.html"> Teampcaptains </br>/ Registration </a> </div></li>
+          <li class="registration"> <div id="registration"> <a href="registration.html"> Teampcaptains <br />/ Registration </a> </div></li>
           <li class="volunteer"> <div id="volunteer"> <a href="volunteer.html"> Volunteer </a> </div></li>
           <li class="merchandise"> <div id="merchandise"> <a href="merchandise.html"> Merchandise </a></div></li>
         </ul>
     </div>
     <div class="main" id="main">
       <h1>FAQ</h1>
-      <p> Comming soon. </p>
+      <p> Coming soon. </p>
     </div>
     <div class="footer" id="footer"> </div>
   </div>
