--- a/index.html
+++ b/index.html
@@ -49,14 +49,17 @@
     </div>
     <div class="main" id="main">
       <h1> Welcome everyone</h1>
-      <p> We are happy to host the ETDS 2020 for you! The ETDS will start from
+      <p> We are happy to host the 63th ETDS for you! The ETDS will start from
       <b>May 29th</b> to  <b>June 1st, 2020</b>. Hopefully we will see you all there! <br/>
-      On this website you can find all the information about the etds amsterdam 2020.
-        If your not familiar with the term ETDS please read the information below. </p>
+      On this website you can find all the information about the ETDS Amsterdam 2020.
+      If your not familiar with the term ETDS please read the information below. </p>
       <h1> Introduction video & Theme anouncement </h1>
-      <p> Video comming soon! </p>
+      <div style="text-align:center">
+        <iframe src="https://drive.google.com/file/d/1qK42F7iSWEwKPlF6LEtEYGjvoTXkFtPJ/preview" 
+        width="640" height="480"></iframe>
+      </div>
       <h1> Theme </h1>
-      <p> In our capital city we like to party. And we like to party in Style!
+      <p> In our capital city we like to party. And we like to party in style!
       So put on your neon colored outfit and party with us.  The theme of the
       63th ETDS is Amsterdam, the blacklight district. </br></br>
       If you fancy some blacklight make-up or paint, GO FOR IT! There
@@ -80,7 +83,7 @@
         dances consist out of Chachacha, Rumba, Jive, and for higher levels,
         Samba and Paso doble. <br/><br/>
         This tournament is not only about competing. The are an multitude of fun
-         activities planned, and two great parties. <br/><br/>
+        activities planned, and two great parties. <br/><br/>
     </div>
     <div class="footer" id="footer">
       <img id="location" src="imgs/location.svg">
