--- a/location.html
+++ b/location.html
@@ -68,9 +68,8 @@
     </p>
     <h1> How to get there by public transport </h1>
     <p>
-      We strongly advise you to plan your trip with 9292.nl (also available in
-      english) and ns.nl. Here you can find all the information about which
-      platforms you'll have to be.
+      We strongly advise you to plan your trip with Google Maps and ns.nl.
+      Here you can find all the information about what platform you'll need.
     </p>
     <h2> Train </h2>
     <p> There are 3 stations near to the USC. Depending on where you traveling
