--- a/lostandfound.html
+++ b/lostandfound.html
@@ -50,7 +50,7 @@
     <div class="main" id="main">
       <h1>Lost and Found</h1>
       <p> The competition is planned to start in the future (30-05-2020).
-        Hence there is not anything lost or found yet. </p>
+        There is not anything lost or found yet. </p>
     </div>
     <div class="footer" id="footer"> </div>
   </div>
