--- a/registration.html
+++ b/registration.html
@@ -49,21 +49,19 @@
     </div>
   <div class="main" id="main">
     <h1>Registration</h1>
-    <p> Teamcaptains have to register you. Please ask your local dance society
-      for the contact information of your teams teamcaptain. If you have trouble
+    <p>Teamcaptains have to register you. Please ask your local dance society
+      for the contact information of your teamcaptain. If you have trouble
       finding your teamcaptains contact us</br></br>
-      There are 600 spots for the tournament. The deadline for registation will
-      be anounced. After the registration the system will draft names. For
-      couples who are register together, you will get in together.
-      Whe are using the system that was also used in previous ETDS (ETDS
-      Groningen).
+      We have 600 spots for the tournament. We will announce the registation deadline soon.
+      After the registration the system will draft names, so for
+      couples who are registered together, you will get in together. <br />
       The cancelation policy will be anounced.
     </p>
     <h1> ETDS dashboard </h1>
     <div class = "dashboard-btn"> <a href="https://xtds.nl/dashboard"> XTDS DASHBOARD </a> </div>
     <p></br>
     This is where you can log on as team captain to register couples, update
-      information and check your registrations. </p>
+    information and check your registrations. </p>
 
   </div>
   <div class="footer" id="footer"> </div>
