--- a/regulations.html
+++ b/regulations.html
@@ -49,7 +49,7 @@
     </div>
     <div class="main" id="main">
       <h1>Regulations</h1>
-      <p> Comming soon. </p>
+      <p> Coming soon. </p>
     </div>
     <div class="footer" id="footer"> </div>
   </div>
