--- a/tournament.html
+++ b/tournament.html
@@ -65,7 +65,7 @@
       </p>
       <h1> Classes </h1>
       <p> There are two main classes: Breitensport and CloseD/Open. If your are a
-      recreational dancer (non-competion) or beginner you're in Breitensport.
+      recreational dancer (non-competion) or beginner you're probably in the Breitensport.
       If you dance competitions, it will be depending on your competition level.
       Check the overview at the bottom of the page. </p>
       <h1> Breitensport </h1>
