--- a/volunteer.html
+++ b/volunteer.html
@@ -48,18 +48,18 @@
         </ul>
     </div>
   <div class="main" id="main">
-    <h1>Mandotory Shifts</h1>
+    <h1>Mandatory Shifts</h1>
     <p> A large event as the ETDS needs a lot of helping hands. Without people helping
-      out ETDS's could not take place. This is why competitors are mandotory to do
-      a minimal of xx hours of shifts. </p>
+      out ETDS's couldn't take place. This is why competitors are mandatory to do
+      a minimal amount of hours for shifts. </p>
 
     <h1> Volunteer shifts</h1>
-    <p>Besides the mandotory shifts we can use every other shift hours you are willing
+    <p>Besides the mandatory shifts we can use every other shift hours you are willing
     to offer us! </br>
-    With doing volunteer shifts beside your mandotory shift you can also earn bonuspoints
+    With doing volunteer shifts beside your mandatory shift you can also earn bonuspoints
     for your team!</p> </br></br>
 
-    <p><b> It is not possible yet to inscribe for shifts </b></p>
+    <p><b> It is not possible to inscribe for shifts yet. </b></p>
 
   </div>
   <div class="footer" id="footer"> </div>
