--- a/merchandise.html
+++ b/merchandise.html
@@ -49,7 +49,7 @@
     </div>
   <div class="main" id="main">
     <h1>Merchandise</h1>
-    <p> comming soon. </p>
+    <p> coming soon. </p>
 
   </div>
   <div class="footer" id="footer"> </div>
