--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
      version="1.1"
      id="svg2"
      xml:space="preserve"
-     width="62.986664"
+     width="50.3893312"
      height="62.987198"
      viewBox="0 0 62.986664 62.987198"
      sodipodi:docname="location.svg"
@@ -199,9 +199,94 @@
                style="fill:#000000;fill-opacity:1;fill-rule:nonzero;stroke:none"
                id="path162"
                inkscape:connector-curvature="0" /></g></g></g></g></svg>
-               <div class="footer-txt">
-               <p class="footer-txt"> USC Universum, Science Park 306, Amsterdam  </p></div>
-               <img id="mail" src="imgs/mail.svg">
+               <p class="footer-txt"> USC Universum, Science Park 306, Amsterdam  </p>
+               <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<!-- Created with Inkscape (http://www.inkscape.org/) -->
+
+<svg id="mail"
+   xmlns:dc="http://purl.org/dc/elements/1.1/"
+   xmlns:cc="http://creativecommons.org/ns#"
+   xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+   xmlns:svg="http://www.w3.org/2000/svg"
+   xmlns="http://www.w3.org/2000/svg"
+   xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+   xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
+   width="13.3430144mm"
+   height="16.678698mm"
+   viewBox="0 0 16.678768 16.678698"
+   version="1.1"
+   id="svg3864"
+   inkscape:version="0.92.1 r15371"
+   sodipodi:docname="mail.svg">
+  <defs
+     id="defs3858">
+    <clipPath
+       clipPathUnits="userSpaceOnUse"
+       id="clipPath18">
+      <path
+         d="m 237.326,92.593 h 47.279 v 47.467 h -47.279 z"
+         id="path16"
+         inkscape:connector-curvature="0" />
+    </clipPath>
+  </defs>
+  <sodipodi:namedview
+     id="base"
+     pagecolor="#ffffff"
+     bordercolor="#666666"
+     borderopacity="1.0"
+     inkscape:pageopacity="0.0"
+     inkscape:pageshadow="2"
+     inkscape:zoom="0.35"
+     inkscape:cx="-1.3382103"
+     inkscape:cy="-74.195489"
+     inkscape:document-units="mm"
+     inkscape:current-layer="layer1"
+     showgrid="false"
+     inkscape:window-width="1366"
+     inkscape:window-height="705"
+     inkscape:window-x="-8"
+     inkscape:window-y="-8"
+     inkscape:window-maximized="1"
+     fit-margin-top="0"
+     fit-margin-left="0"
+     fit-margin-right="0"
+     fit-margin-bottom="0" />
+  <metadata
+     id="metadata3861">
+    <rdf:RDF>
+      <cc:Work
+         rdf:about="">
+        <dc:format>image/svg+xml</dc:format>
+        <dc:type
+           rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
+        <dc:title></dc:title>
+      </cc:Work>
+    </rdf:RDF>
+  </metadata>
+  <g
+     inkscape:label="Laag 1"
+     inkscape:groupmode="layer"
+     id="layer1"
+     transform="translate(-92.958235,-112.52375)">
+    <g
+       transform="matrix(0.35277777,0,0,-0.35277777,9.2346861,161.9338)"
+       id="g12">
+      <g
+         id="g14"
+         clip-path="url(#clipPath18)">
+        <g
+           id="g20"
+           transform="translate(275.1666,109.1208)">
+          <path
+             d="m 0,0 h -0.001 c 0,-1.401 -1.136,-2.535 -2.536,-2.535 h -23.28 c -1.401,0 -2.537,1.135 -2.537,2.535 v 13.388 c 0,0.148 0.016,0.292 0.041,0.433 l 13.378,-8.342 c 0.017,-0.01 0.035,-0.017 0.051,-0.027 0.018,-0.01 0.036,-0.018 0.054,-0.028 0.095,-0.049 0.191,-0.088 0.291,-0.113 0.011,-0.003 0.02,-0.005 0.031,-0.007 0.11,-0.026 0.22,-0.042 0.33,-0.042 h 0.002 c 0.111,0 0.222,0.015 0.331,0.042 0.01,0.002 0.02,0.004 0.031,0.007 0.099,0.025 0.196,0.064 0.291,0.113 0.018,0.01 0.036,0.018 0.054,0.028 0.016,0.01 0.033,0.017 0.05,0.027 L -0.04,13.821 C -0.016,13.68 0,13.536 0,13.388 Z M -14.177,22.675 -0.175,13.943 H -28.18 Z m -0.001,8.311 c -13.068,0 -23.662,-10.593 -23.662,-23.662 0,-13.068 10.594,-23.663 23.662,-23.663 13.069,0 23.663,10.595 23.663,23.663 0,13.069 -10.594,23.662 -23.663,23.662"
+             style="fill:#000000;fill-opacity:1;fill-rule:nonzero;stroke:none"
+             id="path22"
+             inkscape:connector-curvature="0" />
+        </g>
+      </g>
+    </g>
+  </g>
+</svg>
                <p class="footer-txt"> etds.amsterdam@gmail.com </p></div>
     </div>
     </div>
