--- a/program.html
+++ b/program.html
@@ -213,7 +213,213 @@
         </tr>
       </table>
     </div>
-    <div class="footer" id="footer"> </div>
+    <div class="footer" id="footer">
+      <div class="footer-elmnts">
+        <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+  <!-- Created with Inkscape (http://www.inkscape.org/) -->
+  <svg id="location"
+     xmlns:dc="http://purl.org/dc/elements/1.1/"
+     xmlns:cc="http://creativecommons.org/ns#"
+     xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+     xmlns:svg="http://www.w3.org/2000/svg"
+     xmlns="http://www.w3.org/2000/svg"
+     xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+     xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
+     version="1.1"
+     id="svg2"
+     xml:space="preserve"
+     width="50.3893312"
+     height="62.987198"
+     viewBox="0 0 62.986664 62.987198"
+     sodipodi:docname="location.svg"
+     inkscape:version="0.92.1 r15371"><metadata
+       id="metadata8"><rdf:RDF><cc:Work
+           rdf:about=""><dc:format>image/svg+xml</dc:format><dc:type
+             rdf:resource="http://purl.org/dc/dcmitype/StillImage" /><dc:title></dc:title></cc:Work></rdf:RDF></metadata><defs
+       id="defs6"><clipPath
+         clipPathUnits="userSpaceOnUse"
+         id="clipPath18"><path
+           d="m 237.326,92.593 h 47.279 v 47.467 h -47.279 z"
+           id="path16"
+           inkscape:connector-curvature="0" /></clipPath><clipPath
+         clipPathUnits="userSpaceOnUse"
+         id="clipPath34"><path
+           d="M 0,500 H 500 V 0 H 0 Z"
+           id="path32"
+           inkscape:connector-curvature="0" /></clipPath><clipPath
+         clipPathUnits="userSpaceOnUse"
+         id="clipPath58"><path
+           d="m 237.198,337.09 h 47.24 v 47.43 h -47.24 z"
+           id="path56"
+           inkscape:connector-curvature="0" /></clipPath><clipPath
+         clipPathUnits="userSpaceOnUse"
+         id="clipPath70"><path
+           d="M 0,500 H 500 V 0 H 0 Z"
+           id="path68"
+           inkscape:connector-curvature="0" /></clipPath><clipPath
+         clipPathUnits="userSpaceOnUse"
+         id="clipPath110"><path
+           d="m 237.198,398.387 h 46.93 v 47.118 h -46.93 z"
+           id="path108"
+           inkscape:connector-curvature="0" /></clipPath><clipPath
+         clipPathUnits="userSpaceOnUse"
+         id="clipPath126"><path
+           d="M 0,500 H 500 V 0 H 0 Z"
+           id="path124"
+           inkscape:connector-curvature="0" /></clipPath><clipPath
+         clipPathUnits="userSpaceOnUse"
+         id="clipPath154"><path
+           d="m 237.198,276.635 h 47.24 v 47.43 h -47.24 z"
+           id="path152"
+           inkscape:connector-curvature="0" /></clipPath><clipPath
+         clipPathUnits="userSpaceOnUse"
+         id="clipPath170"><path
+           d="M 0,500 H 500 V 0 H 0 Z"
+           id="path168"
+           inkscape:connector-curvature="0" /></clipPath><clipPath
+         clipPathUnits="userSpaceOnUse"
+         id="clipPath204"><path
+           d="M 0,500 H 500 V 0 H 0 Z"
+           id="path202"
+           inkscape:connector-curvature="0" /></clipPath><clipPath
+         clipPathUnits="userSpaceOnUse"
+         id="clipPath256"><path
+           d="M 0,500 H 500 V 0 H 0 Z"
+           id="path254"
+           inkscape:connector-curvature="0" /></clipPath></defs><sodipodi:namedview
+       pagecolor="#ffffff"
+       bordercolor="#666666"
+       borderopacity="1"
+       objecttolerance="10"
+       gridtolerance="10"
+       guidetolerance="10"
+       inkscape:pageopacity="0"
+       inkscape:pageshadow="2"
+       inkscape:window-width="1366"
+       inkscape:window-height="705"
+       id="namedview4"
+       showgrid="false"
+       inkscape:zoom="0.53588673"
+       inkscape:cx="290.44802"
+       inkscape:cy="-261.56011"
+       inkscape:window-x="-8"
+       inkscape:window-y="-8"
+       inkscape:window-maximized="1"
+       inkscape:current-layer="g10"
+       fit-margin-top="0"
+       fit-margin-left="0"
+       fit-margin-right="0"
+       fit-margin-bottom="0" /><g
+       id="g10"
+       inkscape:groupmode="layer"
+       inkscape:label="2901250"
+       transform="matrix(1.3333333,0,0,-1.3333333,-10.229173,657.88064)"><g
+         id="g148"
+         transform="translate(-229.52612,169.34549)"><g
+           id="g150"
+           clip-path="url(#clipPath154)"><g
+             id="g156"
+             transform="translate(264.7164,306.6823)"><path
+               d="m 0,0 c 0,-2.103 -1.703,-3.807 -3.807,-3.807 -2.101,0 -3.805,1.704 -3.805,3.807 0,2.102 1.704,3.807 3.805,3.807 C -1.703,3.807 0,2.102 0,0"
+               style="fill:#000000;fill-opacity:1;fill-rule:nonzero;stroke:none"
+               id="path158"
+               inkscape:connector-curvature="0" /></g><g
+             id="g160"
+             transform="translate(260.944,287.5026)"><path
+               d="m 0,0 c -4.36,0 -8.775,1.25 -8.775,3.641 0,1.677 2.173,2.792 4.976,3.309 C -3.257,6.405 -2.744,5.925 -2.294,5.523 -5.346,5.183 -7.14,4.217 -7.14,3.641 -7.14,2.935 -4.43,1.635 0,1.635 c 4.43,0 7.14,1.3 7.14,2.006 0,0.588 -1.869,1.578 -5.033,1.901 0.455,0.404 0.972,0.889 1.518,1.44 C 6.511,6.479 8.775,5.353 8.775,3.641 8.775,1.25 4.36,0 0,0 m -0.152,25.783 c 0.016,0 0.033,10e-4 0.049,0.002 0.017,-0.001 0.033,-0.002 0.05,-0.002 3.984,-0.063 7.225,-3.355 7.225,-7.34 0,-4.872 -5.206,-9.805 -7.275,-11.573 -0.138,0.118 -0.291,0.252 -0.455,0.398 -0.004,0.002 -0.005,0.004 -0.007,0.007 -2.29,2.034 -6.812,6.627 -6.812,11.168 0,3.985 3.241,7.277 7.225,7.34 m 0.048,10.826 c -13.056,0 -23.643,-10.586 -23.643,-23.643 0,-13.058 10.587,-23.644 23.643,-23.644 13.058,0 23.645,10.586 23.645,23.644 0,13.057 -10.587,23.643 -23.645,23.643"
+               style="fill:#000000;fill-opacity:1;fill-rule:nonzero;stroke:none"
+               id="path162"
+               inkscape:connector-curvature="0" /></g></g></g></g></svg>
+               <p class="footer-txt"> USC Universum, Science Park 306, Amsterdam  </p>
+               <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<!-- Created with Inkscape (http://www.inkscape.org/) -->
+
+<svg id="mail"
+   xmlns:dc="http://purl.org/dc/elements/1.1/"
+   xmlns:cc="http://creativecommons.org/ns#"
+   xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+   xmlns:svg="http://www.w3.org/2000/svg"
+   xmlns="http://www.w3.org/2000/svg"
+   xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+   xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
+   width="13.3430144mm"
+   height="16.678698mm"
+   viewBox="0 0 16.678768 16.678698"
+   version="1.1"
+   id="svg3864"
+   inkscape:version="0.92.1 r15371"
+   sodipodi:docname="mail.svg">
+  <defs
+     id="defs3858">
+    <clipPath
+       clipPathUnits="userSpaceOnUse"
+       id="clipPath18">
+      <path
+         d="m 237.326,92.593 h 47.279 v 47.467 h -47.279 z"
+         id="path16"
+         inkscape:connector-curvature="0" />
+    </clipPath>
+  </defs>
+  <sodipodi:namedview
+     id="base"
+     pagecolor="#ffffff"
+     bordercolor="#666666"
+     borderopacity="1.0"
+     inkscape:pageopacity="0.0"
+     inkscape:pageshadow="2"
+     inkscape:zoom="0.35"
+     inkscape:cx="-1.3382103"
+     inkscape:cy="-74.195489"
+     inkscape:document-units="mm"
+     inkscape:current-layer="layer1"
+     showgrid="false"
+     inkscape:window-width="1366"
+     inkscape:window-height="705"
+     inkscape:window-x="-8"
+     inkscape:window-y="-8"
+     inkscape:window-maximized="1"
+     fit-margin-top="0"
+     fit-margin-left="0"
+     fit-margin-right="0"
+     fit-margin-bottom="0" />
+  <metadata
+     id="metadata3861">
+    <rdf:RDF>
+      <cc:Work
+         rdf:about="">
+        <dc:format>image/svg+xml</dc:format>
+        <dc:type
+           rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
+        <dc:title></dc:title>
+      </cc:Work>
+    </rdf:RDF>
+  </metadata>
+  <g
+     inkscape:label="Laag 1"
+     inkscape:groupmode="layer"
+     id="layer1"
+     transform="translate(-92.958235,-112.52375)">
+    <g
+       transform="matrix(0.35277777,0,0,-0.35277777,9.2346861,161.9338)"
+       id="g12">
+      <g
+         id="g14"
+         clip-path="url(#clipPath18)">
+        <g
+           id="g20"
+           transform="translate(275.1666,109.1208)">
+          <path
+             d="m 0,0 h -0.001 c 0,-1.401 -1.136,-2.535 -2.536,-2.535 h -23.28 c -1.401,0 -2.537,1.135 -2.537,2.535 v 13.388 c 0,0.148 0.016,0.292 0.041,0.433 l 13.378,-8.342 c 0.017,-0.01 0.035,-0.017 0.051,-0.027 0.018,-0.01 0.036,-0.018 0.054,-0.028 0.095,-0.049 0.191,-0.088 0.291,-0.113 0.011,-0.003 0.02,-0.005 0.031,-0.007 0.11,-0.026 0.22,-0.042 0.33,-0.042 h 0.002 c 0.111,0 0.222,0.015 0.331,0.042 0.01,0.002 0.02,0.004 0.031,0.007 0.099,0.025 0.196,0.064 0.291,0.113 0.018,0.01 0.036,0.018 0.054,0.028 0.016,0.01 0.033,0.017 0.05,0.027 L -0.04,13.821 C -0.016,13.68 0,13.536 0,13.388 Z M -14.177,22.675 -0.175,13.943 H -28.18 Z m -0.001,8.311 c -13.068,0 -23.662,-10.593 -23.662,-23.662 0,-13.068 10.594,-23.663 23.662,-23.663 13.069,0 23.663,10.595 23.663,23.663 0,13.069 -10.594,23.662 -23.663,23.662"
+             style="fill:#000000;fill-opacity:1;fill-rule:nonzero;stroke:none"
+             id="path22"
+             inkscape:connector-curvature="0" />
+        </g>
+      </g>
+    </g>
+  </g>
+</svg>
+               <p class="footer-txt"> etds.amsterdam@gmail.com </p></div>
+    </div>
   </div>
   <script src="js/combine.js"></script>
 </body>
