--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
           </li>
           <li class = "house current"> <div id="home">Home </div> </li>
-          <li class = "dropdown" onmouseenter="myEnterFunction()" > <a class="dropbtn"> <div id="info">Information </div> </a>
+          <li class = "dropdown" onmouseenter="myEnterFunction()" > <a class="dropbtn info"> <div id="info">Information </div> </a>
             <div class="dropdown-content" id="dropdown-content">
               <a href="tournament.html">Tournament</a>
               <a href="program.html"> Program </a>
