--- a/faq.html
+++ b/faq.html
@@ -49,7 +49,21 @@
     </div>
     <div class="main" id="main">
       <h1>FAQ</h1>
-      <p> Coming soon. </p>
+      <p>
+        <b> How do I sign up for the ETDS? </b> </br>
+        You can register with your teamcaptains, they will sign you up for the lottery.
+        You will hear from your teamcaptain if you are got in or not. </br></br>
+        <b> How do I pay for the ETDS? </b> </br>
+        We get our payments from your teamcaptains. So you will transfer the money
+        to your teampcaptains (they will provide you with their bankaccount for such affairs).
+        And they transfer the money for all the teammembers that got in to us,
+         including a list who payed.
+        <b> I  dont have a partner, can I still participate? </b> </br>
+        Yes, you sign up without a partner. You will have to find a partner at
+        the blind date rounds. See the tournament section about blind date rounds. </br></br>
+        <b> Can I have different partners for Ballroom and Latin. </b> </br>
+        Yes you can. </br>
+        </p>
     </div>
     <div class="footer" id="footer">
       <div class="footer-elmnts">
