--- a/faq.html
+++ b/faq.html
@@ -57,8 +57,8 @@
         We get our payments from your teamcaptains. So you will transfer the money
         to your teampcaptains (they will provide you with their bankaccount for such affairs).
         And they transfer the money for all the teammembers that got in to us,
-         including a list who payed.
-        <b> I  dont have a partner, can I still participate? </b> </br>
+         including a list who payed. </br>
+        <b> I  dont have a partner, can I still participate? </b> </br></br>
         Yes, you sign up without a partner. You will have to find a partner at
         the blind date rounds. See the tournament section about blind date rounds. </br></br>
         <b> Can I have different partners for Ballroom and Latin. </b> </br>
