--- a/tournament.html
+++ b/tournament.html
@@ -134,6 +134,61 @@
         </tr>
       </table>
 
+      <h1> Blind dating </h1>
+      <p> No partner? You can still sign up! </br>
+      The lottery system will equally distribute leaders and followers.
+      As long as people dont fuck up the system (by not showing etc, so dont do that!)
+      , there is a dance partner for everyone!
+      To find a partner we have a blind date rounds on friday and saterday evening.
+      During these rounds all other partnerless (or mandotory blinddaters) are
+      recognizably marked for you to invite to dance with you. If you like the
+      specimen you are dancing with, you can together register at the tournament office.
+    </p>
+    <h1> Mandatory Blind Dating </h1>
+    <p> For the (super) experienced of us dancers there is a mandatory blind dating.
+    This way you will have another face to look at, than that of your usual dance partner.
+    But above all, than you wont be so damn good. Give other people also a chance to win!</br>
+    The table below shows form what level blind dating will be mandatory. </p>
+
+    <table>
+      <tr>
+        <th>Netherlands NADB</th>
+        <td>Debutants 2</td>
+      </tr>
+      <tr>
+        <th>Netherlands NVAD</th>
+        <td>Debutants 1</td>
+      </tr>
+      <tr>
+        <th>Netherlands NDO</th>
+        <td>Debutants National amateurs</td>
+      </tr>
+      <tr>
+        <th>Netherlands WDC</th>
+        <td>National amateurs until B poule</td>
+      </tr>
+      <tr>
+        <th>Germany</th>
+        <td>D-class</td>
+      </tr>
+      <tr>
+        <th>Germany (Form.)</th>
+        <td>Oberliga, REgionalliga</td>
+      </tr>
+      <tr>
+        <th>Norway</th>
+        <td>Konkurranse</td>
+      </tr>
+      <tr>
+        <th>Czeck Republic</th>
+        <td>D-class</td>
+      </tr>
+      <tr>
+        <th>England</th>
+        <td>Intermediate</td>
+      </tr>
+    </table>
+      
       <p></br></br> Information is still being updated. </p>
 
 
