--- a/tournament.html
+++ b/tournament.html
@@ -137,8 +137,8 @@
       <h1> Blind dating </h1>
       <p> No partner? You can still sign up! </br>
       The lottery system will equally distribute leaders and followers.
-      As long as people dont fuck up the system (by not showing etc, so dont do that!)
-      , there is a dance partner for everyone!
+      As long as people dont fuck up the system (by not showing etc, SO DON'T!),
+      there will be a dance partner for everyone!
       To find a partner we have a blind date rounds on friday and saterday evening.
       During these rounds all other partnerless (or mandotory blinddaters) are
       recognizably marked for you to invite to dance with you. If you like the
@@ -147,8 +147,10 @@
     <h1> Mandatory Blind Dating </h1>
     <p> For the (super) experienced of us dancers there is a mandatory blind dating.
     This way you will have another face to look at, than that of your usual dance partner.
-    But above all, than you wont be so damn good. Give other people also a chance to win!</br>
-    The table below shows form what level blind dating will be mandatory. </p>
+    But above all, than you wont be so darn good. Give other people also a chance to win!
+    Or you can try to defeat your partner. Whatever floats your boat. As long
+    as you just do not dance with them.</br>
+    The table below shows form what level blind dating will be mandatory. </br></br> </p>
 
     <table>
       <tr>
@@ -188,7 +190,7 @@
         <td>Intermediate</td>
       </tr>
     </table>
-      
+
       <p></br></br> Information is still being updated. </p>
 
 
