--- a/tournament.html
+++ b/tournament.html
@@ -149,7 +149,7 @@
     This way you will have another face to look at, than that of your usual dance partner.
     But above all, than you wont be so darn good. Give other people also a chance to win!
     Or you can try to defeat your partner. Whatever floats your boat. As long
-    as you just do not dance with them.</br>
+    as you just do not dance with your regular partner.</br>
     The table below shows form what level blind dating will be mandatory. </br></br> </p>
 
     <table>
