--- a/tournament.html
+++ b/tournament.html
@@ -175,7 +175,7 @@
       </tr>
       <tr>
         <th>Germany (Form.)</th>
-        <td>Oberliga, REgionalliga</td>
+        <td>Oberliga, Regionalliga</td>
       </tr>
       <tr>
         <th>Norway</th>
