--- a/tournament.html
+++ b/tournament.html
@@ -191,9 +191,117 @@
       </tr>
     </table>
 
-      <p></br></br> Information is still being updated. </p>
+    <h1> Ballroom dances </h1>
+    <p> Afraid you suddenly have to dance a slow fox? Check below to see which dances belong to which rounds. </p></br>
+  </br>
+<table>
+    <tr>
+      <th></th>
+      <th> Qualification </th>
+      <th> First round / Redance
+      </br>/  Quarter final</th>
+      <th> Semi final </th>
+      <th> Final </th>
+    </tr>
+    <tr>
+      <th> Amateurs</th>
+      <td> Slow waltz, Tango, Quickstep </td>
+      <td> Slow waltz, Tango, Quickstep </td>
+      <td> Slow waltz, Tango, Quickstep </td>
+      <td> Slow waltz, Tango, Quickstep </td>
+    </tr>
+    <tr>
+      <th> Profis </th>
+      <td> Slow waltz, Tango, Quickstep </td>
+      <td> Slow waltz, Tango, Quickstep </td>
+      <td> Slow waltz, Tango, Viennese waltz, Quickstep </td>
+      <td> Slow waltz, Tango, Viennese waltz, Quickstep </td>
+    </tr>
+    <tr>
+      <th> Masters </th>
+      <td> Slow waltz, Tango, Quickstep </td>
+      <td> Slow waltz, Tango, Quickstep </td>
+      <td> Slow waltz, Tango, Viennese waltz, Quickstep </td>
+      <td> Slow waltz, Tango, Viennese waltz, Slowfox, Quickstep </td>
+    </tr>
+    <tr>
+      <th> Champions </th>
+      <td> Slow waltz, Tango, Quickstep </td>
+      <td> Slow waltz, Tango, Quickstep </td>
+      <td> Slow waltz, Tango, Viennese waltz, Slowfox, Quickstep </td>
+      <td> Slow waltz, Tango, Viennese waltz, Slowfox, Quickstep </td>
+    </tr>
+    <tr>
+      <th> CloseD </th>
+      <td> Slow waltz, Tango, Quickstep </td>
+      <td> Slow waltz, Tango, Quickstep </td>
+      <td> Slow waltz, Tango, Viennese waltz, Slowfox, Quickstep </td>
+      <td> Slow waltz, Tango, Viennese waltz, Slowfox, Quickstep </td>
+    </tr>
+    <tr>
+      <th> Open </th>
+      <td> Slow waltz, Tango, Quickstep </td>
+      <td> Slow waltz, Tango, Quickstep </td>
+      <td> Slow waltz, Tango, Viennese waltz, Slowfox, Quickstep </td>
+      <td> Slow waltz, Tango, Viennese waltz, Slowfox, Quickstep </td>
+    </tr>
+</table>
 
-
+<h1> Latin dances </h1>
+<p> Afraid you suddenly have to dance a paso? Check below to see which dances belong to which rounds. </p></br>
+</br>
+<table>
+<tr>
+  <th></th>
+  <th> Qualification </th>
+  <th> First round / Redance
+  </br>/  Quarter final</th>
+  <th> Semi final </th>
+  <th> Final </th>
+</tr>
+<tr>
+  <th> Amateurs</th>
+  <td> Cha cha, Rumba, Jive </td>
+  <td> Cha cha, Rumba, Jive </td>
+  <td> Cha cha, Rumba, Jive </td>
+  <td> Cha cha, Rumba, Jive </td>
+</tr>
+<tr>
+  <th> Profis </th>
+  <td> Cha cha, Rumba, Jive </td>
+  <td> Cha cha, Rumba, Jive </td>
+  <td> Samba, Cha cha, Rumba, Jive </td>
+  <td> Samba, Cha cha, Rumba, Jive </td>
+</tr>
+<tr>
+  <th> Masters </th>
+  <td> Cha cha, Rumba, Jive </td>
+  <td> Cha cha, Rumba, Jive </td>
+  <td> Samba, Cha cha, Rumba, Jive </td>
+  <td> Samba, Cha cha, Rumba, Paso doble, Jive </td>
+</tr>
+<tr>
+  <th> Champions </th>
+  <td> Cha cha, Rumba, Jive </td>
+  <td> Cha cha, Rumba, Jive </td>
+  <td> Samba, Cha cha, Rumba, Paso doble, Jive </td>
+  <td> Samba, Cha cha, Rumba, Paso doble, Jive </td>
+</tr>
+<tr>
+  <th> CloseD </th>
+  <td> Cha cha, Rumba, Jive </td>
+  <td> Cha cha, Rumba, Jive </td>
+  <td> Samba, Cha cha, Rumba, Paso doble, Jive </td>
+  <td> Samba, Cha cha, Rumba, Paso doble, Jive </td>
+</tr>
+<tr>
+  <th> Open </th>
+  <td> Cha cha, Rumba, Jive </td>
+  <td> Cha cha, Rumba, Jive </td>
+  <td> Samba, Cha cha, Rumba, Paso doble, Jive </td>
+  <td> Samba, Cha cha, Rumba, Paso doble, Jive </td>
+</tr>
+</table>
 
   </div>
   <div class="footer" id="footer">
