--- a/faq.html
+++ b/faq.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ETDS Template</title>
+  <title>ETDS Amsterdam</title>
   <meta name="robots" content="noindex">
   <link rel="stylesheet" href="css/combine.css">
 </head>
@@ -35,6 +35,7 @@
               <a href="program.html"> Program </a>
               <a href="location.html">Location</a>
               <a href="costs.html">Costs</a>
+              <a href="menu.html">Menu</a>
               <a href="packinglist.html">Packing List </a>
               <a href="regulations.html">Regulations</a>
               <a href="results.html">Results</a>
