--- a/location.html
+++ b/location.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>ETDS Template</title>
+  <title>ETDS Amsterdam</title>
     <meta name="robots" content="noindex">
     <link rel="stylesheet" href="css/combine.css">
 </head>
@@ -29,12 +29,13 @@
             </div>
           </li>
           <li class = "house"> <div id="home"> <a href="index.html">Home </a></div> </li>
-          <li class = "dropdown current" onmouseenter="myEnterFunction()" > <a class="dropbtn"> <div id="info">Information </div> </a>
+          <li class = "dropdown current" onmouseenter="myEnterFunction()" > <a class="dropbtn info"> <div id="info">Information </div> </a>
             <div class="dropdown-content" id="dropdown-content">
               <a href="tournament.html">Tournament</a>
               <a href="program.html"> Program </a>
               <a href="location.html">Location</a>
               <a href="costs.html">Costs</a>
+              <a href="menu.html">Menu</a>
               <a href="packinglist.html">Packing List </a>
               <a href="regulations.html">Regulations</a>
               <a href="results.html">Results</a>
