--- a/menu.html
+++ b/menu.html
@@ -138,8 +138,8 @@
         <?xml version="1.0" encoding="UTF-8" standalone="no"?>
         <!-- Created with Inkscape (http://www.inkscape.org/) -->
         <svg id="location" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg"
-          xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" version="1.1" id="svg2" xml:space="preserve" width="50.3893312" height="62.987198"
-          viewBox="0 0 62.986664 62.987198" sodipodi:docname="location.svg" inkscape:version="0.92.1 r15371">
+          xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" version="1.1" id="svg2" width="50" height="50"
+          viewBox="0 0 63 63" sodipodi:docname="location.svg" inkscape:version="0.92.1 r15371">
           <metadata id="metadata8">
             <rdf:RDF>
               <cc:Work rdf:about="">
@@ -205,7 +205,7 @@
         <!-- Created with Inkscape (http://www.inkscape.org/) -->
 
         <svg id="mail" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg"
-          xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" width="13.3430144mm" height="16.678698mm" viewBox="0 0 16.678768 16.678698" version="1.1" id="svg3864"
+          xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" width="13mm" height="13mm" viewBox="0 0 16.7 16.7" version="1.1" id="svg3864"
           inkscape:version="0.92.1 r15371" sodipodi:docname="mail.svg">
           <defs id="defs3858">
             <clipPath clipPathUnits="userSpaceOnUse" id="clipPath18">
