Added Facebook logo all pages

--- a/menu.html
+++ b/menu.html
@@ -72,8 +72,8 @@
           </th>
         <tr>
           <th> Saturday Morning</td>
-          <td><b>breakfast:</b> <br /> Dutch breakfast</td>
-          <td><b>breakfast:</b> <br /> Dutch breakfast</td>
+          <td><b>Breakfast:</b> <br /> Dutch breakfast</td>
+          <td><b>Breakfast:</b> <br /> Dutch breakfast</td>
         </tr>
         <tr>
           <th> Saturday Lunch</td>
@@ -87,8 +87,8 @@
         </tr>
         <tr>
           <th> Sunday Morning</td>
-          <td><b>breakfast:</b> <br /> Dutch breakfast</td>
-          <td><b>breakfast:</b> <br /> Dutch breakfast</td>
+          <td><b>Breakfast:</b> <br /> Dutch breakfast</td>
+          <td><b>Breakfast:</b> <br /> Dutch breakfast</td>
         </tr>
         <tr>
           <th> Sunday Lunch</td>
@@ -147,7 +147,7 @@
         </g>
         </svg>
 
-        <p class="footer-txt"> facebook-page </p>
+        <p class="footer-txt"> <a href="https://www.facebook.com/ETDS-2020-Amsterdam-103919511106341" target="_blank" >facebook-page</a>  </p>
 
         <?xml version="1.0" encoding="UTF-8" standalone="no"?>
         <!-- Created with Inkscape (http://www.inkscape.org/) -->
@@ -250,7 +250,7 @@
             </g>
           </g>
         </svg>
-        <p class="footer-txt"> etds.amsterdam@gmail.com </p>
+        <p class="footer-txt"> <a href="etds.amsterdam@gmail.com" target="_blank" >etds.amsterdam@gmail.com</a>  </p>
 
       </div>
     </div>
