--- a/lostandfound.html
+++ b/lostandfound.html
@@ -29,7 +29,7 @@
             </div>
           </li>
           <li class = "house"> <div id="home"> <a href="index.html">Home </a></div> </li>
-          <li class = "dropdown current" onmouseenter="myEnterFunction()" > <a class="dropbtn"> <div id="info">Information </div> </a>
+          <li class = "dropdown current" onmouseenter="myEnterFunction()" > <a class="dropbtn info"> <div id="info">Information </div> </a>
             <div class="dropdown-content" id="dropdown-content">
               <a href="tournament.html">Tournament</a>
               <a href="program.html"> Program </a>
