--- a/faq.html
+++ b/faq.html
@@ -59,11 +59,19 @@
         to your teampcaptains (they will provide you with their bankaccount for such affairs).
         And they transfer the money for all the teammembers that got in to us,
          including a list who payed. </br></br>
-        <b> I  dont have a partner, can I still participate? </b> </br>
+        <b> I  don’t have a partner, can I still participate? </b> </br>
         Yes, you sign up without a partner. You will have to find a partner at
         the blind date rounds. See the tournament section about blind date rounds. </br></br>
         <b> Can I have different partners for Ballroom and Latin. </b> </br>
-        Yes you can. </br>
+        Yes you can. </br></br>
+        <b>Can I go through the lottery system without my dancing partner? </b></br>
+        No, if you sign up together, you are either both in, or both out.</br></br>
+        <b>Can I get a discount if I only participate 1 day or don’t spend te night? </b></br>
+        No. </br></br>
+        <b>How can I experience the ETDS if I’m short on cash?</b></br>
+        If you become a super volunteer, you can attend the ETDS for free.
+        We will arrange your food, drinks and a place to sleep. However, you
+        can not join any of the competitions. </br>
         </p>
     </div>
     <div class="footer" id="footer">
