--- a/packinglist.html
+++ b/packinglist.html
@@ -50,7 +50,22 @@
     </div>
     <div class="main" id="main">
       <h1>Packing List</h1>
-      <p> Coming soon. </p>
+
+      <p> So you don't forget some things. Beware that you are responsible for
+      own belownings. the ETDS isn’t responsible for possessions that have gone
+      missing or have been damaged. </p>
+
+      <h2> Walking on shoes outside the dance floor is not permitted, so take
+        some nice socks with you to walk on! Tip: you can buy glow in the dark
+        socks</h2>
+
+      <ul id="packing">
+      <li> general </li>
+      <li> ID card/passport </li>
+      <li> Money (cash) </li>
+      <li> Student card / proof of school registration </li>
+    </ul>
+
     </div>
     <div class="footer" id="footer">
       <div class="footer-elmnts">
