Removed link to xtds

--- a/registration.html
+++ b/registration.html
@@ -59,7 +59,8 @@
       The cancelation policy will be anounced.
     </p>
     <h1> ETDS dashboard </h1>
-    <div class = "dashboard-btn"> <a href="https://xtds.nl/dashboard"> XTDS DASHBOARD </a> </div>
+    <!-- <div class = "dashboard-btn"> <a href="https://xtds.nl/dashboard" target="_blank"> XTDS DASHBOARD </a> </div> -->
+    <div class = "dashboard-btn"> <a href="registration.html"> XTDS DASHBOARD </a> </div>
     <p></br>
     This is where you can log on as team captain to register couples, update
     information and check your registrations. </p>
